<resources>
    <string name="app_name">Donde Orlando</string>
    <string name="nav_header_title">Donde Orlando</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Inicio</string>
    <string name="cancel_order">Cancelar Orden</string>
    <string name="finish_order">Terminar Orden</string>
    <string name="menu_sales">Ventas</string>

    <string name="menu_inventory">Inventario</string>
    <string name="menu_configuration">Configuracion</string>
    <string name="product">Producto</string>
    <string name="quantity">Cantidad</string>
    <string name="price">Unidad</string>
    <string name="total">$0.0</string>
    <string name="total_car">Total :</string>
    <string name="summary_order">Resumen de la orden</string>
    <string name="report_sales">Reporte de ventas</string>
    <string name="sales_day">Ventas del dia: </string>
    <string name="courtesy_day">Cortesias del dia: </string>
    <string name="close_sales">Cerrar Ventas</string>
    <string name="update_stock_text">Ingresa la cantidad que quieres añadir!</string>
    <string name="hint_quantity">50</string>
    <string name="text_next">Siguiente</string>
    <string name="text_change_password">Cambiar contraseña</string>
    <string name="text_add_quantity">Selecciona la cantidad que quieres añadir!</string>
    <string name="text_check_box">Es una porción adicional?</string>
    <string name="text_check_box_delete">Eliminar \n todo!</string>
    <string name="text_check_box_courtesy">Cortesia</string>
    <string name="text_update">Actualizar</string>
    <string name="text_btn_add">Agregar</string>
    <string name="et_password">Codigo de seguridad</string>
    <string name="et_update_pass">Escribe tu nueva contraseña</string>
    <string name="et_pass">Escribe tu contraseña actual</string>
    <string name="et_confirm_pass">Repite tu nueva contraseña</string>
    <string name="txt_empty_sells">No tienes ventas registradas!</string>
    <string name="txt_new_sells">Ve al inicio y registra nuevas ventas</string>
    <string name="btn_add_sells">Registrar ventas</string>
    <string name="msg_close_sell">Ventas cerradas!</string>
    <string name="msg_error_close_sells">Hubo un error al cerrar las ventas</string>
    <string name="msg_try_again">Intenta nuevamente</string>
    <string name="msg_numbers">Ingresa 4 digitos</string>
    <string name="title_alert_dialog">Genial!</string>
    <string name="msg_alert_dialog">Has actualizado tu clave, no la olvides</string>
    <string name="btn_close_alert_dialog">Cerrar</string>
    <string name="msg_success_sells">Venta registrada exitosamente!</string>
    <string name="msg_error_sells">Hubo un error al guardar la orden</string>
    <string name="msg_title_empty_products">Oopss</string>
    <string name="msg_title_confirm">Estas seguro?</string>
    <string name="positive_button">Si</string>
    <string name="negative_button">No</string>
    <string name="msg_add_product">Debes agregar productos primero</string>
    <string name="msg_code_error">Codigo Erroneo</string>
    <string name="price_total">Total</string>
    <string name="text_hint">1234</string>
    <string name="keypad_1">1</string>
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>
    <string name="keypad_6">6</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>
    <string name="keypad_0">0</string>
    <string name="title_alert">¿Estas seguro que quieres cerrar las ventas?</string>
    <string name="pass_not_match">Las contraseñas no coinciden</string>
    <string name="title_config">CONFIGURACION</string>
    <string name="pass_error">Contraseña erronea</string>
    <string name="pass_current">Contraseña actual</string>
    <string name="pass_change">Cambiar contraseña</string>
</resources>
