<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="com.gforeroc.dondeorlando.utils.OnNumberClickListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_large"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/close_dialog_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_middle"
                    android:src="@drawable/button_custom_close"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/et_password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/default_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="Escribe tu código"
                    android:inputType="numberPassword"
                    android:textSize="@dimen/text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_middle">

                <Button
                    android:id="@+id/btn_1"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:onClick="@{(v) -> listener.onNumberClick(v, 1)}"
                    android:text="@string/keypad_1" />

                <Button
                    android:id="@+id/btn_2"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_toEndOf="@+id/btn_1"
                    android:onClick="@{(v) -> listener.onNumberClick(v, 2)}"
                    android:text="@string/keypad_2" />

                <Button
                    android:id="@+id/btn_3"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_toEndOf="@+id/btn_2"
                    android:onClick="@{(v) -> listener.onNumberClick(v, 3)}"
                    android:text="@string/keypad_3" />

                <Button
                    android:id="@+id/btn_4"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/btn_1"
                    android:onClick="@{(v) -> listener.onNumberClick(v, 4)}"
                    android:text="@string/keypad_4" />

                <Button
                    android:id="@+id/btn_5"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/btn_2"
                    android:layout_toEndOf="@id/btn_4"
                    android:onClick="@{(v) -> listener.onNumberClick(v, 5)}"
                    android:text="@string/keypad_5" />

                <Button
                    android:id="@+id/btn_6"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/btn_3"
                    android:layout_toEndOf="@id/btn_5"
                    android:onClick="@{(v) -> listener.onNumberClick(v, 6)}"
                    android:text="@string/keypad_6" />

                <Button
                    android:id="@+id/btn_7"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@+id/btn_4"
                    android:onClick="@{(v) -> listener.onNumberClick(v, 7)}"
                    android:text="@string/keypad_7" />

                <Button
                    android:id="@+id/btn_8"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/btn_5"
                    android:layout_toEndOf="@id/btn_7"
                    android:onClick="@{(v) -> listener.onNumberClick(v, 8)}"
                    android:text="@string/keypad_8" />

                <Button
                    android:id="@+id/btn_9"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/btn_6"
                    android:layout_toEndOf="@id/btn_8"
                    android:onClick="@{(v) -> listener.onNumberClick(v, 9)}"
                    android:text="@string/keypad_9" />

                <ImageView
                    android:id="@+id/btn_remove"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/btn_7"
                    android:background="@drawable/ic_eliminar" />

                <Button
                    android:id="@+id/btn_0"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/btn_8"
                    android:layout_marginStart="5dp"
                    android:layout_toStartOf="@+id/btn_9"
                    android:layout_toEndOf="@id/btn_remove"
                    android:onClick="@{(v) -> listener.onNumberClick(v, 0)}"
                    android:text="@string/keypad_0" />

                <ImageView
                    android:id="@+id/btn_check"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/btn_9"
                    android:layout_toEndOf="@id/btn_0"
                    android:background="@drawable/ic_check_black_24dp"
                    android:gravity="center" />

                <ImageView
                    android:id="@+id/btn_back"
                    style="@style/keypad_button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/btn_9"
                    android:layout_toEndOf="@id/btn_0"
                    android:background="@drawable/ic_volver_foreground"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>