<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/summary_order"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/title_car">

        <TextView
            android:id="@+id/text_name_product_car"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/product"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_quantity_product_car"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/quantity"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/text_price_product_car"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:text="@string/price"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Rv_summary_car"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        tools:listitem="@layout/dialog_check_order_item" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="Rv_summary_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_total_car" />

    <TextView
        android:id="@+id/text_title_total_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/total"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/Rv_summary_car"
        app:layout_constraintTop_toBottomOf="@+id/Rv_summary_car" />

    <TextView
        android:id="@+id/text_total_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rv_summary_car" />


</androidx.constraintlayout.widget.ConstraintLayout>