<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingBottom="@dimen/default_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_car"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_large"
                android:gravity="center"
                android:text="@string/summary_order"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/close_dialog_car"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_middle"
                android:src="@drawable/ic_close_keypad"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/margin_middle"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@+id/constraint">

            <TextView
                android:id="@+id/text_name_product_car"
                android:layout_width="@dimen/default_width_size"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/product"
                android:textColor="@android:color/black"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_quantity_product_car"
                android:layout_width="@dimen/default_width_size"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quantity"
                android:textColor="@android:color/black"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_price_product_car"
                android:layout_width="@dimen/default_width_size"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/price"
                android:textColor="@android:color/black"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="@dimen/default_width_size"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/price_total"
                android:textColor="@android:color/black"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Rv_summary_car"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout"
            tools:listitem="@layout/dialog_check_order_item" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="Rv_summary_car"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_total_car" />

        <TextView
            android:id="@+id/text_title_total_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_middle"
            android:text="@string/total_car"
            android:textColor="@android:color/black"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@+id/text_total_car"
            app:layout_constraintTop_toBottomOf="@+id/Rv_summary_car" />

        <TextView
            android:id="@+id/text_total_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_large"
            android:layout_marginTop="@dimen/margin_middle"
            android:text="@string/total"
            android:textColor="@android:color/black"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Rv_summary_car" />

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_custom"
            android:gravity="center"
            android:paddingStart="@dimen/default_dimen"
            android:paddingEnd="@dimen/default_dimen"
            android:text="@string/finish_order"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title_total_car" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>